<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/silicon_labs_logo"
        android:background="#808080"
        app:layout_constraintHeight_percent=".25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".81"
        android:background="@drawable/view_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <TextView
                android:id="@+id/register_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/full_name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/full_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_textView" />

            <EditText
                android:id="@+id/full_name_editText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/view_edittext"
                android:drawableEnd="@drawable/ic_fullname"
                android:hint="@string/insert_content"
                android:inputType="textPersonName"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/full_name_textView" />

            <TextView
                android:id="@+id/phone_number_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/phone_number"
                app:layout_constraintStart_toStartOf="@+id/full_name_textView"
                app:layout_constraintTop_toBottomOf="@id/full_name_editText" />

            <EditText
                android:id="@+id/phone_number_editText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/view_edittext"
                android:drawableEnd="@drawable/ic_phone"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="@+id/full_name_editText"
                app:layout_constraintStart_toStartOf="@+id/full_name_editText"
                app:layout_constraintTop_toBottomOf="@id/phone_number_textView" />

            <TextView
                android:id="@+id/password_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="@+id/phone_number_textView"
                app:layout_constraintTop_toBottomOf="@id/phone_number_editText" />

            <EditText
                android:id="@+id/password_editText"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/view_edittext"
                android:drawableEnd="@drawable/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="@id/phone_number_editText"
                app:layout_constraintStart_toStartOf="@id/phone_number_editText"
                app:layout_constraintTop_toBottomOf="@id/password_textView" />

            <TextView
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="* Vui lòng cung cấp thông tin chính xác để đảm bảo công tác phòng chống dịch Covid-19"
                app:layout_constraintEnd_toEndOf="@id/password_editText"
                app:layout_constraintStart_toStartOf="@id/password_editText"
                app:layout_constraintTop_toBottomOf="@id/password_editText" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/view_button"
                android:text="@string/register"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/note"
                app:layout_constraintStart_toStartOf="@id/note"
                app:layout_constraintTop_toBottomOf="@id/note" />

            <TextView
                android:id="@+id/login_now"
                android:layout_width="137dp"
                android:layout_height="17dp"
                android:layout_marginTop="8dp"
                android:text="@string/you_have_account"
                android:textColor="@color/purple_700"
                app:layout_constraintEnd_toEndOf="@+id/register_button"
                app:layout_constraintStart_toStartOf="@+id/register_button"
                app:layout_constraintTop_toBottomOf="@id/register_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>